# telegram-assistant

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: test.yml
archive/: README.md
archive/docs/: dev-guide.md  runbook.md
archive/scripts/: auth_google.py  daemon.sh  pull-tasks.sh  push-tasks.sh  run.sh  sync-tasks.sh  watchdog.plist  watchdog.sh
archive/tests/: conftest.py  test_conversation.py  test_fitness_tools.py  test_formatting.py  test_gmail.py  test_model_router.py  test_telegram_policy.py
config/: .env.example  groups-registry.md  policy.json
docs/: PLAN-VPS-MULTIUSER.md  USER-GUIDE.md  WORK-LOG-2026-04-11.md  architecture.md
docs/openclaw/: ARCHITECTURE.md  CONFIG.md  INTEGRATIONS.md  MEMORY.md  OPERATIONS.md  README.md  SKILLS.md  SYNC.md
logs/: assistant.log.2026-04-01
memory/: MEMORY.md
memory/conversations/: -5055663499.json  435926703.json
memory/fitness/: 2026-04-01.md  2026-04-02.md
scripts/: sync-tasks-git.sh  test-sync-delete.sh
src/: config.py  logging_config.py  main.py
src/brain/: anthropic_engine.py  context_gatherer.py  conversation.py  model_router.py  system_prompt.py
src/integrations/: apple_health.py  elevenlabs_tts.py  google_services.py  groq_stt.py
src/memory/: memory_store.py  vault_adapter.py
src/tools/: admin_tools.py  (+12 more)
tests/: test_admin_tools.py  test_approval.py  test_cost_tracker.py  test_deutsch_tools.py  test_fitness_tools.py  test_formatting.py  test_group_logger.py  test_tool_registry.py  test_vault_adapter.py  test_vault_tools.py
vps/: .env.example  Caddyfile  README.md
(+25 files in other folders)
