[project]
name = "telegram-assistant"
version = "0.1.0"
description = "Personal Telegram assistant powered by Anthropic Claude API"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.76.0",
    "python-telegram-bot>=22.5",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "PyGithub>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
